--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [Panel Variables]
 btc_server_ip = "127.0.0.1"
 btc_server_port = 8332
-btc_rpc_user = "rpcuser"
-btc_rpc_password = "strong_password"
+btc_rpc_user = "RPC_user"
+btc_rpc_password = "$tr0ng_passw0rd"
 exchange_rate = "bitfinex"
 refresh_interval = 60
 log_portion = 50
